Config AOS + AOS

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
       <link rel="icon" type="image/svg+xml" href="/public/assets/icon-tab.svg" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Sutandev</title>
+      <script>document.documentElement.classList.add('jsx')</script>
     </head>
     <body>
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
+      <script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
     </body>
   </html>
 
