--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div id="root"></div>
       <script type="module" src="/src/main.jsx"></script>
       <script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
+      <script src="./node_modules/preline/dist/preline.js"></script>
     </body>
   </html>
 
