--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Sutandev</title>
       <script>document.documentElement.classList.add('jsx')</script>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     </head>
     <body>
       <div id="root"></div>
